# fastapi-demo

./: Dockerfile  main.py  okteto.yml  pyproject.toml  run-poetry-install.sh
app/: api.py
app.egg-info/: SOURCES.txt  requires.txt
